--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-whisperx
+git+[https://github.com/m-bain/whisperx.git](https://github.com/m-bain/whisperx.git)
 pyannote.audio
 torch
 numpy
 scipy
+python-dotenv
