Fix PyTorch 2.6 security errors, SSL certs, and Diarization import

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+[https://github.com/m-bain/whisperx.git](https://github.com/m-bain/whisperx.git)
+git+https://github.com/m-bain/whisperx.git
 pyannote.audio
 torch
 numpy
